# rl-mpc-locomotion

./: .gitignore  .gitmodules  CITATION.cff  LICENSE  README-LAPTOP-C21HIBEK.md  README.md  RL_MPC_Locomotion.py  environment.yml  setup.py  simulator_test.py  test.ipynb  test_controller.py
Isaac_Sim/: sim_leg_control.py  util_isaac.py
Isaac_Simulator/: sim_leg_control.py  util_isaac.py
MPC_Controller/: DesiredStateCommand.py  FootSwingTrajectory.py  Gait.py  Interpolation.py  LegController.py  Logger.py  MIT_Controller.py  MIT_UserParameters.py  Parameters.py  RobotController.py  RobotRunner.py  RobotRunnerMin.py  SimulationBridge.py  StateEstimator.py  StateEstimatorContainer.py  test.ipynb  utils.py
MPC_Controller/convex_MPC/: CMakeLists.txt  ConvexMPCLocomotion.py  Gait.py  RobotState.py  SolverMPC.cpp  SolverMPC.py  convexMPC_interface.py  mpc_osqp.cc  unit_test.ipynb
RL_Environment/: WeightPolicy.py  gamepad_reader.py  model_test.py  sim_utils.py  train.py
RL_Simulator/: gamepad_reader.py  isaac_bridge.py  sim_leg_control.py  sim_setup.py  sim_trot_control.py  utils.py
doc/: 1-MIT_cheetah_installation.md  MPC_Cheetah.aux  MPC_Cheetah.tex  note.md
docs/: 0-model_import.md  1-MIT_cheetah_installation.md  2-MIT_Architecture.md  2-development_log.md  3-isaac_api_note.md  4-python_learning_book_note.md  5-upgrade_isaac_gym.md  6-qp_solver.md  7-isaac_gym_env.md  7-pybind11.md  8-rl_games_api_note.md  9-useful_cmd.md  MPC_Cheetah.tex
images/: 4_cheetah_trot.mkv  CPG_trot.mkv  MPC_block.drawio  MPC_trot_fix.mkv  (+21 more)
src/ref_sun/: CMakeLists.txt  QProblemEigen.h
(+138 files in other folders)
